# feast

./: .codecov.yaml  .commitlintrc.yaml  .dockerignore  .drone.yml  .gitbook.yaml  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .helmdocsignore  .pre-commit-config.yaml  .prow.yaml  .readthedocs.yml  .releaserc.js  .scalafmt.conf  .secrets.baseline  .travis.yml  AFFIRM.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  Created_timestamp_fix.patch  DATAFRAME_ABSTRACTION_DEMO.md  DEPRECATIONS.md  DISCORD_README.md  Dockerfile  File-from-terminal.txt  File-from-vscode.txt  GIT_MERGE.md  Gopkg.toml  IMAGE_REQUIRED.md  MANIFEST.in  Makefile  OWNERS  PR_DESCRIPTION.md  (+42 more)
.claude/rules/: feast-components.md  feast-skills-maintenance.md
.claude/skills/: Agent-Skill
.cursor/: Agent-Skill
.cursor/rules/: feast-components.mdc  feast-ui.mdc  (+1 more)
.devcontainer/: Dockerfile  devcontainer.json
.fvenv/: pyvenv.cfg
.github/: CODEOWNERS  TRIAGE_LIST.md  auto_assign-issues.yml  auto_assign.yml  issue_label_bot.yaml  pull_request_template.md  renovate.json  stale.yml
.prow/: config.yaml  plugins.yaml
.tekton/: README.md  feast-group-test.yaml  odh-feast-operator-pull-request.yaml  odh-feast-operator-push.yaml  odh-feast-operator-release-push.yaml  odh-feature-server-pull-request.yaml  odh-feature-server-push.yaml  odh-feature-server-release-push.yaml
.travis/: cleanup_testdata.sh  decrypt_secrets.sh  install_feast_sdk.sh  install_google_cloud_sdk.sh  install_helm.sh  prepare_maven_cache_for_docker.sh  prepare_testdata.sh  run_batch_import_and_validate.sh  run_streaming_import_and_validate.sh  service_account.json.enc  start_local_feast.sh
Agent-Skill/: SKILL.md
Dockerfiles/: Dockerfile.feast-operator.konflux  Dockerfile.feature-server.konflux
all protos/: Entity.proto  Field.proto
auth/: pom.xml
blog/: a-state-of-feast.md  announcing-feast-0-11.md  faster-feature-transformations-in-feast.md  feast-0-20-adds-api-and-connector-improvements.md  feast-benchmarks.md  go-feature-server-benchmarks.md  how-danny-chiao-is-keeping-feast-simple.md  performance-test-for-python-based-feast-feature-server.md  rbac-role-based-access-controls.md  the-road-to-feast-1-0.md  what-is-a-feature-store.md
blog_posts/: feast-release-0-12-adds-aws-redshift-and-dynamodb-stores.md
charts/: README.md  feast-0.3.0.tgz
cli/: .gitignore  Makefile  README.md
common/: .gitignore  .openapi-generator-ignore  pom.xml
common-test/: pom.xml
community/: ADOPTERS.md  README.md  governance.excalidraw  governance.md  maintainers.md
core/: .gitignore  README.md  pom.xml
design-notes/: CASEY_SESSION_NOTES.md  design-hybrid-with-batches.md  native_implementation_notes.md  offline_store_design.md  prompt-mdb-fetch-pandas-join-with-batches.md
docgen/: README.md  render.py  test_script.jinja2  test_script.jinja2.sh  validate_output.jinja2.template
docker/: README.md
docs/: README.md  SUMMARY.md  community.md  components.md  concepts.md  contributing.md  create-a-feature-repository.md  deploy-a-feature-store.md  endusers.md  entities.md  faq.md  feature-views.md  genai.md  getting-help.md  install.md  load-data-into-the-online-store.md  openlineage_integration.md  quickstart.md  roadmap.md  root.md  specs.md  test.html  troubleshooting.md  why-feast.md
examples/: README.md  bqStore.yml  feature_store_openlineage.yaml  multiple_join_keys_example.py  redis.yml  values.yaml  wordCountFeature.yml  wordEntity.yml
feast-tracing-demo/: TRACING.md
feast_profile_demo/: .gitignore  README.md
go/: README.md  main.go  main_test.go
ingestion/: .gitignore  README.md  pom.xml
ingestion-spark/: pom.xml
integration-tests/: feast-helm-values.yaml.template
java/: .gitignore  CONTRIBUTING.md  Makefile  README.md  pom.xml
job-controller/: pom.xml
job-coordinator/: pom.xml
milvus/: Dockerfile
plans/: session-2-verification-tasks.md
protos/: Makefile  buf.go.gen.yaml  buf.python.gen.yaml  buf.yaml  ghzurl.sh  grpcurl.sh  input.json
redis-hackathon/: build-feast-redis-vector.sh  deploy-feast-k8s.sh  push-feast-images.sh  test-feast-redis-vector-k8s.py
rfcs/: 0000-python-sdk.md  0000-template.md  0001-python-sdk.md  README.md
scripts/: check-init-py.sh  create-cluster  mypy-daemon.sh  perf-monitor.py  uv-run.sh
serving/: README.md  pom.xml  sample_cassandra_config.yml  sample_redis_config.yml
skills/: SKILL.md
temp_mcp_demo/: test_mcp_client.py
temp_remote/: start_server.py
testing/: Makefile  README.md
tests/: README.md  create-kubernetes-cron-job.sh  delete-kubernetes-cron-job.sh  pytest.ini  requirements.txt  start.sh
todos/: 001-pending-p1-sql-injection-entity-dataframe.md  002-pending-p1-sql-injection-identifiers.md  003-pending-p1-missing-ttl-filtering.md  004-pending-p1-append-only-duplicates.md  005-pending-p1-non-deterministic-tie-breaking.md  005-resolved-p1-non-deterministic-tie-breaking.md  006-pending-p2-no-catalog-caching.md  007-pending-p2-python-loop-deduplication.md  008-pending-p2-missing-created-timestamp-dedup.md  009-pending-p2-memory-materialization.md  010-pending-p2-hardcoded-event-timestamp.md  011-pending-p2-incomplete-type-mapping.md  012-pending-p2-small-file-problem.md  013-pending-p2-missing-offline-write-batch.md  014-pending-p2-credential-exposure.md  015-pending-p2-exception-swallowing.md  016-pending-p1-duplicate-function.md  017-pending-p0-unvalidated-sql-identifiers.md  018-pending-p0-credentials-in-sql-set.md  019-pending-p1-mor-double-scan.md  020-pending-p1-ttl-value-validation.md  021-pending-p1-overly-broad-exception-handling.md  022-pending-p1-missing-test-coverage.md  023-pending-p2-redundant-logger-import.md
ui/: .babelrc.js  .env.local  .env.production  .eslintignore  .eslintrc.js  .gitignore  .npmrc  .npmrc.ci  .npmrc.local  .prettierignore  CONTRIBUTING.md  Dockerfile  PUBLISHING_TO_NPM.md  README.md  jest.config.js  package-lock.json  package.json  rollup.config.js  tonyhschu-feast-ui-experimental-0.1.0.tgz  tsconfig.build-lib.json  vue.config.js
(+6703 files in other folders)
