[build-system]
requires = [
  "grpcio-tools>=1.56.2,<2",
  "grpcio>=1.56.2,<2",
  "mypy-protobuf==3.1",
  "protobuf==4.25.4",
  "pybindgen==0.22.0",
  "setuptools>=60",
  "setuptools_scm>=6.2",
  "sphinx!=4.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Including this section is comparable to supplying use_scm_version=True in setup.py.

[tool.ruff]
line-length = 88
target-version = "py39"
include = ["*.py", "*.pyi"]

[tool.ruff.format]
# exclude a few common directories in the root of the project
exclude = [ 
  ".eggs", 
  ".git", 
  ".hg", 
  ".mypy_cache",
  ".tox", 
  ".venv", 
  "_build", 
  "buck-out",
  "build",
  "dist",
  "pb2.py",
  ".pyi",
  "protos",
  "sdk/python/feast/embedded_go/lib"]
